Added blog post for February 03, 2021 about bugs

--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,38 @@
 	</nav>
 	<div class="container">
 		<section class="jumbotron" id="blog">
+				<h6><i>February 03, 2021</i></h6>
+				<h5><b>Blog Post Three:</b></h5>
+				<h3><i>This bugs me</i></h3>
+				
+				<p>Exercise 6.4 of the Teaching Open Source text requires that I find the oldest bug in Open Library’s issues tracker that hasn’t been resolved. Thankfully, Open Library 
+					has a long history on GitHub, so locating this was merely an act of sorting issues by oldest to newest. The oldest bug was #29, which is titled, “’add-cover’ edits in 
+					Recent Changes table should display Cover as comment (for review).” This bug was opened June 29, 2011, so this particular bug is nearly a decade old. 
+				</p>
+				<p>From what I can glean from the comments, it looks like the goal of this bug is to add a feature to the added covers section. Open Library has people and bots uploading images daily. 
+					In fact, it looks like hundreds of images are added daily. Clearly quality control becomes an issue when uploading images in such volume. The user interface lacks the ability to 
+					quickly see the image quality of cover pages without clicking on each one.  In other words, librarians and those adding images would like the ability to preview the images without 
+					having to click a link to the book. 
+				</p>
+				<p>It isn’t clear why this hasn’t been resolved yet. In fact, it’s not for a lack of engagement from the community or leads at Open Library. Just twelve days ago, Mek renamed a label 
+					from Team: Front-end to frontend, which I assume is replacing deprecated language. The following day, tushar-ga requested to work on this issue. I think one way to solve this issue 
+					would be to create a separate page as a gallery of images, but that’s just my initial thought. There’s probably a more elegant and less costly approach that would involve reworking 
+					the existing interface. 
+				</p>
+				<p>Exercise 6.5 requires that I create a bug tracker account. Fortunately, Open Library uses GitHub to track there bugs and Slack to resolve issues and blockages. We were invited to the 
+					Slack this week, and we were assigned to our first issue on Monday, February 01.</p> 
+				<p>Exercise 6.6.1 requires that a bug be reproduced; however, we are still trying to understand the architecture and workflow. I found a recent issue with intermittent inability to 
+					upload images. Our team still hasn’t been able to upload locally, so this is something that needs to wait. One example of a reproducible bug is something that I already mentioned: 
+					issue #29. I don’t want to comment on a separate bug right now because we have already been assigned to an issue, which is labeled good first issue. I will post an update here once 
+					I am able to upload images to reproduce our current issue #4492.</p>	
+				<p>Exercise 6.7.1 requires that I find five bug reports—in the case of Open Library these are issues—and to triage them according to triage rules. One such rule is to look for similar
+					 bugs. I noticed that bug #29 had a similar bug, which was closed because it was basically the same thing: issue #108. I located an issue categorized as Epic, which means that it 
+					 is a long-term project. This epic is for HTML validation and has seven related issues: #3881, #4438, #4439, #4440, #4441, #4472, and #4473. All have been closed except for #4438. 
+					 #4438 looks to have been resolved, so I commented on the Epic to notify the lead that it can be closed and all checkboxes for the issues in this epic can be checked off. </p>
+		</section>
+	</div>
+	<div class="container">
+		<section class="jumbotron" id="blog">
 			<h6><i>January 27, 2021</i></h6>
 
 				<h5><b>Blog Post Two: </b></h5>
