--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
 		<section class="jumbotron" id="blog">
 				<h6><i>February 03, 2021</i></h6>
 				<h5><b>Blog Post Three:</b></h5>
-				<h3><i>This bugs me</i></h3>
+				<h3><i>This Bugs Me</i></h3>
 				
 				<p>Exercise 6.4 of the Teaching Open Source text requires that I find the oldest bug in Open Library’s issues tracker that hasn’t been resolved. Thankfully, Open Library 
 					has a long history on GitHub, so locating this was merely an act of sorting issues by oldest to newest. The oldest bug was #29, which is titled, “’add-cover’ edits in 
