--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,12 @@
 				<p>Exercise 6.6.1 requires that a bug be reproduced; however, we are still trying to understand the architecture and workflow. I found a recent issue with intermittent inability to 
 					upload images. Our team still hasn’t been able to upload locally, so this is something that needs to wait. One example of a reproducible bug is something that I already mentioned: 
 					issue #29. I don’t want to comment on a separate bug right now because we have already been assigned to an issue, which is labeled good first issue. I will post an update here once 
-					I am able to upload images to reproduce our current issue #4492.</p>	
+					I am able to upload images to reproduce our current issue #4492.</p>
+				<h6>Update:</h6>
+				<p>This morning my team and I discovered how to upload images to replicate the issue of stretched covers in the carouselle. The main problem was that we needed to open separate
+					terminals to execute the commands. I am going to upload a video tutorial that walks contributors through the process of importing test data so that others can see how to add books 
+					and editions locally. 
+				</p>	
 				<p>Exercise 6.7.1 requires that I find five bug reports—in the case of Open Library these are issues—and to triage them according to triage rules. One such rule is to look for similar
 					 bugs. I noticed that bug #29 had a similar bug, which was closed because it was basically the same thing: issue #108. I located an issue categorized as Epic, which means that it 
 					 is a long-term project. This epic is for HTML validation and has seven related issues: #3881, #4438, #4439, #4440, #4441, #4472, and #4473. All have been closed except for #4438. 
