--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
 					 is a long-term project. This epic is for HTML validation and has seven related issues: #3881, #4438, #4439, #4440, #4441, #4472, and #4473. All have been closed except for #4438. 
 					 #4438 looks to have been resolved, so I commented on the Epic to notify the lead that it can be closed and all checkboxes for the issues in this epic can be checked off. </p>
 					 <h4>Update:</h4>
-					 <p>This morning my team and I discovered how to upload images to replicate the issue of stretched covers in the carouselle. The main problem was that we needed to open separate
+					 <p>This morning my team and I discovered how to upload images to replicate the issue of stretched covers in the carousele. The main problem was that we needed to open separate
 						 terminals to execute the commands. I am going to upload a video tutorial that walks contributors through the process of importing test data so that others can see how to add books 
 						 and editions locally. 
 					 </p>	
