--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,41 @@
 	</nav>
 	<div class="container">
 		<section class="jumbotron" id="blog">
+				<h6><i>February 10, 2021</i></h6>
+				<h5><b>Blog Post Four:</b></h5>
+				<h3><i>What's Happening?</i></h3>
+				
+				<p>This week I was asked to read an article from the IEEE Software publication. IEEE is the Institute of Electrical and Electronics Engineers. The authors of “ Trends and Challenges 
+					for Software Engineering in the Mobil Domain,“ featured in the Mobile Computing section of the IEEE Software publication for January-February 2021, forecast the future of mobile 
+					applications. This article is a summary “of a discussion that 65 researchers and practitioners had during a panel session, The Role of Engineering and Development in Mobile Software,
+					 held at the 2018 IEEE/Association for Computing Machinery (ACM) International Conference on Mobile Software Engineering and Systems conference in Gothenburg, Sweden”(89) They call 
+					 for the academic embrace of new methodologies, frameworks, and work processes “are mandatory and require a direct link between research, industry, and end users”(88). While I would 
+					 like to unpack each of these throughout the course of this post, I will only discuss a these with varying degrees of success.   
+				</p>
+				<p>The authors reveal an increase in research articles ‘relating to “mobile’ or ‘Android’ has grown from 14% of all accepted papers in 2016 to 31% in 2018, a 120% increase during the 
+					span of two years”(88). While this is significant, it isn’t necessarily surprising given that mobile devices currently account for 66% of time users spend consuming digital media. 
+				</p>
+				<p>This ubiquity implies that android developers must follow fast development cycles while balancing the tradeoffs that come with rapid development: energy efficiency, security, and 
+					privacy. In fact, the authors propose that tradeoff analysis should be required “during the design and development of mobile apps”(89). Of course, tradeoff analysis is exactly 
+					what it sounds like: analyzing the loss or gain from trading between a quality or aspect of design or development. In theory I would agree with this; however, it could be 
+					problematic to add more to a workflow when trying to meet project deadlines. On the other hand, tradeoff analysis is already implicitly baked into design and development, so 
+					asking those involved to explicitly perform tradeoff analysis might not be a stretch on team resources.  
+				</p>
+				<p>The authors also suggest stepping beyond Android to contribute in a more general way that won’t be made irrelevant in the case of a disruption to the mobile OS ecosystem. 
+					I’m not sure that I buy that argument though. I contend that Android is here to stay, especially since it is open source. This isn’t to say that the authors don’t recommend 
+					very real challenges for researchers. New distribution platforms created by researchers could disrupt the ecosystem and make entry that much easier for new projects. Expanding 
+					IDEs and application programming interfaces are another suggestion. They even recommend moving beyond Java to explore languages that extend Java such as Kotlin, or a framework 
+					such as React Native created by Facebook. 
+				</p> 
+				<p>Perhaps one of the most significant points made in this article is about the transition from research to industry. The authors warn that industry operates at scale, which requires 
+					the minimizing of complexity. Often is the case that researchers solve problems without regard to complexity as long as the problem is adequately researched. This seems to be the 
+					point of new frameworks, to minimize complexity by extending existing languages. The more we abstract away the complexity, perhaps the better equipped we are to solve real problems
+					in the existing ecosystem of mobile computing.
+				</p>
+		</section>
+	</div>
+	<div class="container">
+		<section class="jumbotron" id="blog">
 				<h6><i>February 03, 2021</i></h6>
 				<h5><b>Blog Post Three:</b></h5>
 				<h3><i>This Bugs Me</i></h3>
