More typos fixes

--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
 					 for the academic embrace of new methodologies, frameworks, and work processes, which “are mandatory and require a direct link between research, industry, and end users”(88). While I would 
 					 like to unpack each of these throughout the course of this post, I will only discuss a these with varying degrees of success.   
 				</p>
-				<p>The authors reveal an increase in research articles ‘relating to “mobile’ or ‘Android’ has grown from 14% of all accepted papers in 2016 to 31% in 2018, a 120% increase during the 
+				<p>The authors reveal an increase in research articles ‘relating to “'mobile’ or ‘Android’ has grown from 14% of all accepted papers in 2016 to 31% in 2018, a 120% increase during the 
 					span of two years”(88). While this is significant, it isn’t necessarily surprising given that mobile devices currently account for 66% of time users spend consuming digital media. 
 				</p>
 				<p>This ubiquity implies that android developers must follow fast development cycles while balancing the tradeoffs that come with rapid development: energy efficiency, security, and 
