Corrected punctuation issues in first paragraph

--- a/blog.html
+++ b/blog.html
@@ -41,8 +41,8 @@
 				<h5><strong>Blog Post Four:</strong></h5>
 				<h3><em>What's Happening?</em></h3>
 				
-				<p>This week I was asked to read an article from the IEEE Software publication. IEEE is the Institute of Electrical and Electronics Engineers. The authors of “ Trends and Challenges 
-					for Software Engineering in the Mobil Domain, “featured in the Mobile Computing section of the IEEE Software publication for January-February 2021, forecast the future of mobile 
+				<p>This week I was asked to read an article from the IEEE Software publication. IEEE is the Institute of Electrical and Electronics Engineers. The authors of "Trends and Challenges 
+					for Software Engineering in the Mobil Domain," featured in the Mobile Computing section of the IEEE Software publication for January-February 2021, forecast the future of mobile 
 					applications. This article is a summary “of a discussion that 65 researchers and practitioners had during a panel session, The Role of Engineering and Development in Mobile Software,
 					 held at the 2018 IEEE/Association for Computing Machinery (ACM) International Conference on Mobile Software Engineering and Systems conference in Gothenburg, Sweden”(89) They call 
 					 for the academic embrace of new methodologies, frameworks, and work processes, which “are mandatory and require a direct link between research, industry, and end users”(88). While I would 
