fixed wording in last paragraph

--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
 					 without violating any setters of the parent. Interface Segregation is when programmers intentionally avoid implementing methods that aren’t used, which helps programmers avoid 
 					 tight coupling. Dependency Inversion “has two key points: Abstractions should not depend upon details; Details should depend upon abstractions.” 
 				</p>
-				<p>This is a difficult concept to understand. This definitely reinforces my need to read through Uncle Bob’s modules. Thankfully, William Durand seems to know his audience because he 
+				<p>This is a difficult concept to understand, which definitely reinforces my need to read through Uncle Bob’s modules. Thankfully, William Durand seems to know his audience because he 
 					ends with “[e]ven if you don’t understand all these principles, always think before writing code. Take the time to understand those that you don’t understand. Honestly, writing 
 					SOLID code is not that hard.” With those words of encouragement, I think I can begin to think more about avoiding tight coupling while writing my code. In this way, I’ll begin to 
 					implement SOLID code.
