--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,46 @@
 	</nav>
 	<div class="container">
 		<section class="jumbotron" id="blog">
+				<h6><i>March 12, 2021</i></h6>
+				<h5><strong>Blog Post Six:</strong></h5>
+				<h3><em>Release Early and Often</em></h3>
+				
+				<p>This week’s reading from chapter 8 of Client-Centered Software Development covers technical writing, user documentation, and user support to consider when preparing to deploy an 
+					application. This chapter is bolstered with reading from Karsten Wade’s chapters 8 & 9 titled “Explaining the Code” and “Release Early, Release Often,” respectively, which offers 
+					some examples of how to properly document code in two ways: “Content written ad hoc and in the flow of working…[and c]ontent planned as a document of some size. For example, 
+					writing comments is something that every developer should use. While every programming class has encouraged and even graded projects based on the use or lack of comments, 
+					programming in the real world doesn’t always follow these rules when there aren’t overt incentives such as a grade to encourage writing comments. In fact, I have already 
+					encountered some complex jQuery written as inline JS in Open Library that was missing comments. Although the code is short, it is still using variables and functions that 
+					aren’t altogether clear in purpose. Comments are simply one of the most integral portions of the code because at the end of the day, code is written for humans; therefore, comments 
+					should be written so that we can all read and understand it without wasting time trying to figure out what the code is doing. 
+				</p>
+				<p>The second type of writing is planned. CCSD suggests over twenty tips for technical writing. Many of these are familiar from my years spent teaching composition to elementary through 
+					college students; however, it’s important to review a list like this before writing documentation to remember best practices. For example, the author suggests concise writing. 
+					Short, precise sentences > longer, ambiguous sentences. That is, employ the KISS method: Keep It Simple, Stupid. Karsten Wade proposes a five-step writing process for 
+					technical writing:  
+				</p>
+				<ol>
+					<li>Planning</li>
+					<li>Content</li>
+					<li>Writing</li>
+					<li>Internationalization/Localization</li>
+					<li>Review</li>
+				</ol>
+				<p>This is essentially the writing process for any document. It is simple enough to remember and provides a visual for the writer because it follows a waterfall method. That is, as portions 
+					of the process are finished from the top, each step falls closer to the final body of writing. The most significant portion of this to me is that documentation may require writing it in 
+					different languages for non-native speakers to understand. I have never worked on a project of that scope, but I think that it would be rewarding to see a piece of software become so widely 
+					adopted that it required teams of translators. I suppose that is another reason to keep documentation simple so that translation teams could move more quickly than they could if they were 
+					translating overly sophisticated prose. In fact, some of the document translation could be automated if the writing were semantically and syntactically simplified. 
+				</p>
+				<p>Because the development process is iterative, user documentation is an organic piece of the software entity that grows with the application. It is paramount to an organizations success 
+					for documentation to be part of the process rather than an afterthought. And so what does it actually mean to release early and release often? Of course this refers to code releases; however,
+					documentation must also accompany each release. In fact, without appropriate documentation there wouldn't be a way for contributors to continue to build on each release. The lesson for this 
+					week is to document, document, document.   
+				</p>
+		</section>
+	</div>
+	<div class="container">
+		<section class="jumbotron" id="blog">
 				<h6><i>February 18, 2021</i></h6>
 				<h5><strong>Blog Post Five:</strong></h5>
 				<h3><em>Stupid or Solid?</em></h3>
